--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h1 data-aos="fade-up">HORACE CRAFT DISTILARY</h1>
-            <p data-aos="fade-up" data-aos-delay="100">A taste of blended Gin</p>
+            <p data-aos="fade-up" data-aos-delay="100">Essence of Life in every sip.</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#contact" class="btn-get-started">contact</a>
               <a href="https://www.youtube.com" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
