--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>oladelej@yahoo.com</p>
+                <p>Horacebeverages@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -353,7 +353,7 @@
             <h4>Contact</h4>
             <p>
               <strong>Phone:</strong> <span>+447-55-480-7191</span><br>
-              <strong>Email:</strong> <span>oladelej@yahoo.com</span><br>
+              <strong>Email:</strong> <span>Horacebeverages@gmail.com</span><br>
             </p>
           </div>
         </div>
