--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Horace</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Horace craft</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="#">Adeboyejo</a>
       </div>
